@@ -1198,8 +1198,9 @@ $\lt{T}{p(x)} = x^2 p(x)$.
 Find a basis of $\rng{T}$.
 Is $T$ surjective?
 </problem>
-<solution contributor="chrisblack">If we transform the basis of $P_2$, then <acroref type="theorem" acro="SSRLT" /> guarantees we will have a spanning set of $\rng{T}$.  A basis of $P_2$ is $\set{1, x, x^2}$.  If we transform the elements of this set, we get the set $\set{x^2, x^3, x^4}$ which is a spanning set for $\rng{T}$.  These three vectors are linearly independent, so $\set{x^2, x^3, x^4}$ is a basis of $\rng{T}$.
-</solution>
+<solution contributor="chrisblack">If we transform the basis of $P_2$, then <acroref type="theorem" acro="SSRLT" /> guarantees we will have a spanning set of $\rng{T}$.  A basis of $P_2$ is $\set{1, x, x^2}$.  If we transform the elements of this set, we get the set $\set{x^2, x^3, x^4}$ which is a spanning set for $\rng{T}$.  These three vectors are linearly independent, so $\set{x^2, x^3, x^4}$ is a basis of $\rng{T}$.<br /><br />
+
+Since $\rng{T}$ has dimension $3$, and the codomain has dimension $5$, they cannot be equal.  So <acroref type="theorem" acro="RSLT" /> says $T$ is not surjective.</solution>
 </exercise>
 
 <exercise type="C" number="30" rough="Find basis of range.  Is T surjective?">
