@@ -16,6 +16,7 @@ Edit:  Subsection IVLT.SLELT, reference Definition MVP for T's definition (Kyle 
 Edit:  Completed Solution ILT.C27 (Duncan Bennett)
 Edit:  About 130 line-break adjustments, for 5 inch text width at 10pt
 Edit:  Edits, Subsection CB.CELT
+Edit:  Solution SLT.C29, added solution to surjective question (Dan Messenger)
 Change:  Replaced Definition RR by an informal discussion
 Change:  Definition TSVS renamed as Definition SSVS
 Change:  Proof Technique D: discussion about definitions as nouns, adjectives
